--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
           </div>
       </div>
     </div>
-    <h2>Made by Juan Galvis</h2>
+    <h2>Made by Juan Galvis
+        <br>
+        <span>Have a good day </span>
+    </h2>
   </body>
 </html>
